Changed the text of the site

--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -4,19 +4,31 @@
     </head>
     <body>
         <div>
-            <h1><a href="/">Blog Django Girls</a></h1>
+            <h1><a href="/">Trechos de musiquinhas</a></h1>
         </div>
 
         <div>
             <p>publicado: 15.10.2022, 15:37</p>
-            <h2><a href="">Meu primeiro post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+            <h2><em><a href="">Euphoria</a></em></h2>
+            <p>모래 바닥이 갈라진대도
+            <br>
+            그 누가 이 세곌 흔들어도
+            <br>
+            잡은 손 절대 놓지 말아줘
+            <br>
+            제발 꿈에서 깨어나지 마
         </div>
 
         <div>
-            <p>publicado: 14.06.2014, 12:14</p>
-            <h2><a href="">Meu segundo post</a></h2>
-            <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut f.</p>
+            <p>publicado: 15.10.2022, 15:58</p>
+            <h2><a href=""><em>Serendipity</em></a></h2>
+            <p>우주가 우릴 위해 움직였어
+            <br>
+            조금의 어긋남조차 없었어
+            <br>
+            너와 내 행복은 예정됐던 걸
+            <br>
+            'Cause you love me and I love you
         </div>
     </body>
 </html>
